# findMFPy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CMakeLists.txt  LICENSE  README.md  index.html  noxfile.py  objects.inv  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
docs/api/: findmfpy.rst
search/: search_index.json
src/: main.cpp
src/findmfpy/: __init__.py  _api.py  _core.pyi  api.py
tests/: test_api.py  test_compiled.py
